# TyWRF-Core

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  PROGRESS.md  README.md  pyproject.toml
bindings/wrf_physics/: ABI_V2_MANIFEST.md  README.md  wrf_physics_bridge.h
docs/: architecture.md  cuda_ready_layout.md  diagnostic_closures.md  validation_plan.md  wrf_compatibility.md
include/tywrf/: field_view.hpp  grid.hpp  state.hpp  version.hpp
include/tywrf/dynamics/: base_state.hpp  base_state_provider.hpp  cycle_schedule.hpp  dynamics_loop.hpp  mass_continuity_tendency.hpp  pressure_gradient_wind_tendency.hpp  pressure_refresh.hpp  pressure_refresh_hook.hpp  pressure_refresh_staging.hpp  state_stepper.hpp  tendency.hpp  wind_tendency.hpp
include/tywrf/io/: forcing_apply.hpp  forcing_frames.hpp  forcing_io.hpp  netcdf_schema.hpp  pressure_refresh_io.hpp  wrf_state_io.hpp
include/tywrf/nest/: base_state_exchange.hpp  base_state_exchange_adapter.hpp  base_state_source_staging.hpp  nest_interface.hpp  parent_child_interpolation.hpp  state_exchange.hpp  state_remap.hpp  static_fields.hpp  time_level_sync.hpp
include/tywrf/physics_bridge/: staging.hpp
src/core/: version.cpp
src/dynamics/: base_state.cpp  base_state_provider.cpp  cycle_schedule.cpp  dynamics_loop.cpp  mass_continuity_tendency.cpp  pressure_gradient_wind_tendency.cpp  pressure_refresh.cpp  pressure_refresh_hook.cpp  pressure_refresh_staging.cpp  state_stepper.cpp  tendency.cpp  wind_tendency.cpp
src/io/: forcing_apply.cpp  forcing_frames.cpp  forcing_io.cpp  netcdf_schema.cpp  pressure_refresh_io.cpp  wrf_state_io.cpp
src/nest/: base_state_exchange.cpp  base_state_exchange_adapter.cpp  base_state_source_staging.cpp  nest_interface.cpp  parent_child_interpolation.cpp  state_exchange.cpp  state_remap.cpp  static_fields.cpp  time_level_sync.cpp
src/physics_bridge/: staging.cpp
src/tools/: base_state_probe.cpp  pressure_refresh_probe.cpp  selected_field_cycle.cpp  skeleton_cycle.cpp  tendency_cycle.cpp
tests/unit/: base_state_exchange_adapter_test.cpp  base_state_exchange_test.cpp  base_state_probe_tool_test.cpp  base_state_provider_test.cpp  base_state_source_staging_test.cpp  base_state_test.cpp  cycle_schedule_test.cpp  dynamics_loop_test.cpp  field_layout_test.cpp  forcing_apply_test.cpp  forcing_frames_test.cpp  forcing_io_test.cpp  mass_continuity_tendency_test.cpp  nest_interface_test.cpp  netcdf_schema_test.cpp  parent_child_interpolation_test.cpp  physics_bridge_test.cpp  pressure_gradient_wind_tendency_test.cpp  pressure_refresh_hook_test.cpp  pressure_refresh_io_test.cpp  pressure_refresh_probe_tool_test.cpp  pressure_refresh_staging_test.cpp  pressure_refresh_test.cpp  selected_field_cycle_tool_test.cpp  skeleton_cycle_tool_test.cpp  smoke_test.cpp  state_exchange_test.cpp  state_remap_test.cpp  state_stepper_test.cpp  static_fields_test.cpp  tendency_cycle_tool_test.cpp  tendency_test.cpp  test_analyze_cycle_delta.py  test_audit_diagnostic_adapter_provider_source.py  test_audit_mass_pressure_blocker.py  test_audit_moving_nest.py  test_audit_pressure_column_runtime_probe.py  test_audit_pressure_formula_column_probe.py  test_audit_pressure_refresh_candidate.py  test_audit_pressure_refresh_formula.py  (+30 more)
tools/: __init__.py  analyze_cycle_delta.py  audit_diagnostic_adapter_provider_source.py  audit_mass_pressure_blocker.py  audit_moving_nest.py  audit_pressure_column_runtime_probe.py  audit_pressure_formula_column_probe.py  audit_pressure_refresh_candidate.py  audit_pressure_refresh_formula.py  audit_pressure_refresh_formula_inputs.py  audit_pressure_refresh_producer.py  audit_pressure_refresh_sources.py  audit_pressure_refresh_vertical_bias.py  audit_reference_cycles.py  audit_selected_field_evolution.py  audit_selected_field_pipeline.py  audit_selected_field_spatial_alignment.py  audit_selected_field_state.py  audit_selected_field_timeline.py  audit_selected_field_wind_error.py  audit_selected_field_wind_source_attribution.py  audit_wind_subcycling.py  audit_wind_tendency_decomposition.py  baseline_candidate.py  compare_wrfout.py  cycle_gate.py  derive_mslp.py  extract_reference.py  report_10min_diagnostics.py  run_6h_cycle_test.py  run_cycle_gate_with_slp.py  run_skeleton_cycle.py  skeleton_cycle_driver.py  tc_diagnostics.py  write_core_wrfout.py
