[project]
name = "tywrf-core"
version = "0.1.0"
description = "Python tools for TyWRF-Core WRF reference extraction and validation."
requires-python = ">=3.11,<3.12"
dependencies = [
  "cftime>=1.6.4",
  "matplotlib>=3.9.0",
  "netCDF4>=1.7.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scipy>=1.14.0",
  "xarray>=2024.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
